nextcloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
spec:
  rules:
    - host: "nextcloud.das"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: nextcloud-web
